--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^3.1.2",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.1",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "multer": "^1.3.0"
   }
 }
