--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project for Enterprise Development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Shane Lacey <shanel262@hotmail.com> (https://github.com/shanel262)",
   "license": "ISC",
