--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Shane Lacey <shanel262@hotmail.com> (https://github.com/shanel262)",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
     "express-validator": "^3.1.2",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.1",
     "morgan": "^1.8.1",
